// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders ok Performs initial render with rowCount: -1 1`] = `null`;

exports[`Table component renders ok Performs initial render with rowCount: -2 1`] = `null`;

exports[`Table component renders ok Performs initial render with rowCount: 0 1`] = `null`;

exports[`Table component renders ok Performs initial render with rowCount: 1 1`] = `
<div
  className="afvscr-nonst afvscr-table-wrapper"
>
  <table
    aria-colcount={0}
    className="afvscr-nonst-subtable"
    style={
      Object {
        "marginLeft": -0,
        "width": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
  <div
    className="afvscr-scroll-container"
    onScroll={[Function]}
    tabIndex="0"
  >
    <div
      aria-hidden="true"
      className="afvscr-height-provider"
      style={
        Object {
          "height": 16,
        }
      }
    />
    <table
      aria-colcount={0}
      aria-rowcount={1}
      style={
        Object {
          "minWidth": "100%",
          "tableLayout": "auto",
        }
      }
    >
      <colgroup />
      <thead
        className="afvscr-hdnwrp"
        onClick={[Function]}
      >
        <tr />
      </thead>
      <tbody
        aria-hidden="true"
        className="afvscr-scroller"
      >
        <tr
          aria-hidden="true"
          className="afvscr-scroller"
          style={
            Object {
              "height": 0,
            }
          }
        />
      </tbody>
      <tbody>
        <tr
          aria-rowindex={1}
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: 2 1`] = `
<div
  className="afvscr-nonst afvscr-table-wrapper"
>
  <table
    aria-colcount={0}
    className="afvscr-nonst-subtable"
    style={
      Object {
        "marginLeft": -0,
        "width": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
  <div
    className="afvscr-scroll-container"
    onScroll={[Function]}
    tabIndex="0"
  >
    <div
      aria-hidden="true"
      className="afvscr-height-provider"
      style={
        Object {
          "height": 32,
        }
      }
    />
    <table
      aria-colcount={0}
      aria-rowcount={2}
      style={
        Object {
          "minWidth": "100%",
          "tableLayout": "auto",
        }
      }
    >
      <colgroup />
      <thead
        className="afvscr-hdnwrp"
        onClick={[Function]}
      >
        <tr />
      </thead>
      <tbody
        aria-hidden="true"
        className="afvscr-scroller"
      >
        <tr
          aria-hidden="true"
          className="afvscr-scroller"
          style={
            Object {
              "height": 0,
            }
          }
        />
      </tbody>
      <tbody>
        <tr
          aria-rowindex={1}
        />
        <tr
          aria-rowindex={2}
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: undefined 1`] = `null`;
